--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="text-wrapper">
-        <textarea name="text" id="text" ></textarea>
+        <textarea name="text" id="text" placeholder="enter your text here to analize" ></textarea>
         <button onclick="setText()">Generate Info</button>
     </div>
 
